# maild

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  maild.kdev4  postinstall  vcpkg.json
app/: CMakeLists.txt  auth_command.h  data_command.cpp  hello_command.h  help_command.cpp  mail_command.cpp  mail_command.h  main.cpp  options.h  options_parser.cpp  options_parser.h  quit_command.cpp  quit_command.h  rcpt_command.cpp  rcpt_command.h  rset_command.cpp  server_options.h  session.cpp  session.h  smtp_command.h  smtp_server.h  verify_command.cpp
conf/: RootCA.key  RootCA.pem  dh2048.pem  log.properties  log.properties.sample  maild.conf  maild.conf.sample  maild_web.conf  maild_web.conf.sample  web_log.properties.sample
docker/: .gitignore  Dockerfile.build  Dockerfile.db.build  Dockerfile.maild.build  Dockerfile.maild_base.build  Dockerfile.maild_web.build  build.sh  build_maild.sh  docker-compose.yml  maild.conf  maild_web.conf  setupdb.sql
lib/: CMakeLists.txt  active_object.cpp  active_object.h  auth_command.cpp  auth_command.h  crow.h  crow_all.h  data_command.cpp  data_command.h  ehlo_command.cpp  ehlo_command.h  hello_command.cpp  hello_command.h  help_command.cpp  help_command.h  json.hpp  magic_handler.h  mail.h  mail_command.cpp  mail_command.h  maild_socket.h  quit_command.cpp  quit_command.h  rcpt_command.cpp  rcpt_command.h  rset_command.cpp  rset_command.h  server.cpp  server.h  server_manager.cpp  server_manager.h  server_options.cpp  server_options.h  session.cpp  session.h  smtp_command.cpp  smtp_command.h  smtp_server.cpp  smtp_server.h  starttls_command.cpp  (+16 more)
service/: maild.service  maild_web.service
sql/: maild.sql
test/: CMakeLists.txt  send_email.py  server_test.cpp  test_utils.cpp
test/data/: test.eml  travel_spam.eml
vcpkg-ports/gmime/: portfile.cmake
vcpkg-ports/libmagic/: configure.ac  portfile.cmake
vcpkg-ports/libmimetic/: Makefile.am  Makefile.in  portfile.cmake  vcpkg.json
web/: CMakeLists.txt  main.cpp  options.cpp  options.h  options_parser.cpp  web_file_server.cpp  web_not_found_exception.cpp  web_not_found_exception.h  web_options.cpp  web_options.h  web_server.cpp  web_server.h
www/: index.html
www/css/: app.css
www/js/: app.js
