cmake_minimum_required(VERSION 3.2)
project(maild)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

SET(MAILD_VERSION_MAJOR "0")
SET(MAILD_VERSION_MINOR "0")
SET(MAILD_VERSION_PATCH "6")

add_definitions(-DMAILD_VERSION="${MAILD_VERSION_MAJOR}.${MAILD_VERSION_MINOR}.${MAILD_VERSION_PATCH}")
add_definitions(-DMAILD_STRING="MailD v${MAILD_VERSION_MAJOR}.${MAILD_VERSION_MINOR}.${MAILD_VERSION_PATCH}")

if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17 CACHE STRING "")
endif()

if(CMAKE_CXX_STANDARD)
    set(conan_std cppstd=${CMAKE_CXX_STANDARD})
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(CMAKE_BUILD_TYPE EQUAL "Debug")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
endif()

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

set(BEASTHTTP_DIR ${CMAKE_SOURCE_DIR}/external/beasthttp/BeastHttp)
set(BEASTHTTP_INCLUDE ${BEASTHTTP_DIR}/include)

file(GLOB_RECURSE HEADERS *.h *.hpp *.hxx )
add_custom_target(Headers SOURCES ${HEADERS})

add_subdirectory(lib)
add_subdirectory(app)
add_subdirectory(test)
add_subdirectory(web)

SET(CPACK_PACKAGE_NAME "maild")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MailD")
SET(CPACK_RESOURCE_FILE_LICENSE_PROVIDED FALSE)
SET(CPACK_INTERACTIVE FALSE)
SET(CPACK_INCLUDE_SUBDIR TRUE)
SET(CPACK_PACKAGE_VERSION_MAJOR ${MAILD_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${MAILD_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${MAILD_VERSION_PATCH})


set(CPACK_RPM_RELOCATION_PATHS "/${CMAKE_INSTALL_SYSCONFDIR}" "${CMAKE_INSTALL_BINDIR}")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0) # don't prepend package name
#set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
set(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinstall")

install(DIRECTORY "www/"
  DESTINATION "/var/www/html/maild")

install(FILES "conf/maild.conf.sample"
  DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/maild")

install(FILES "conf/log.properties.sample"
  DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/maild")
  
install(FILES "conf/maild_web.conf.sample"
  DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/maild"
  )

install(FILES "conf/log.properties.sample"
  DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/maild"
  )
install(FILES "conf/web_log.properties.sample"
  DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/maild"
  )

install(FILES "service/maild.service" 
    DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/systemd/system"  
    )

install(FILES "service/maild_web.service" 
    DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/systemd/system"    
    )
    
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
list(APPEND CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/var")
list(APPEND CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/etc/systemd")
list(APPEND CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/etc/systemd/system")


INCLUDE(CPack)
