cmake_minimum_required(VERSION 3.15)

option(TESTS_ENABLED "Enable tests" ON)

set(VCPKG_OVERLAY_PORTS "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports")
set(VCPKG_C_FLAGS "-DOPENSSL_NO_AUTOLOAD_CONFIG ${VCPKG_C_FLAGS}")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(ENABLE_TESTS)
  list(APPEND VCPKG_MANIFEST_FEATURES "tests")
endif()


project(maild)


SET(MAILD_VERSION_MAJOR "0")
SET(MAILD_VERSION_MINOR "1")
SET(MAILD_VERSION_PATCH "18")
set(MAILD_VERSION "${MAILD_VERSION_MAJOR}.${MAILD_VERSION_MINOR}.${MAILD_VERSION_PATCH}")
set(MAILD_STRING "MailD v${MAILD_VERSION_MAJOR}.${MAILD_VERSION_MINOR}.${MAILD_VERSION_PATCH}")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)

add_subdirectory(lib)
add_subdirectory(app)
add_subdirectory(web)
if(TESTS_ENABLED)
    add_subdirectory(test)
endif()
SET(CPACK_PACKAGE_NAME "maild")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MailD")
SET(CPACK_RESOURCE_FILE_LICENSE_PROVIDED FALSE)
SET(CPACK_INTERACTIVE FALSE)
SET(CPACK_INCLUDE_SUBDIR TRUE)
SET(CPACK_PACKAGE_VERSION_MAJOR ${MAILD_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${MAILD_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${MAILD_VERSION_PATCH})


set(CPACK_RPM_RELOCATION_PATHS "/${CMAKE_INSTALL_SYSCONFDIR}" "${CMAKE_INSTALL_BINDIR}")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0) # don't prepend package name
#set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
set(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinstall")

install(DIRECTORY "www/"
  DESTINATION "/var/www/html/maild")

install(FILES "conf/maild.conf.sample"
  DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/maild")
  
install(FILES "conf/maild_web.conf.sample"
  DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/maild"
  )

install(FILES "service/maild.service" 
    DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/systemd/system"  
    )

install(FILES "service/maild_web.service" 
    DESTINATION "/${CMAKE_INSTALL_SYSCONFDIR}/systemd/system"    
    )
    
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
list(APPEND CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/var")
list(APPEND CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/etc/systemd")
list(APPEND CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/etc/systemd/system")


INCLUDE(CPack)
